# 808xmidterm

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  SYSTEM_TEST_GUIDELINE.txt  doxygen_config  system_test_demo.sh
Matlab_files/: IK_Jacobian.m  compute_Jacobian.m  compute_dth.m
app/: CMakeLists.txt  Environment.cpp  Obstacle.cpp  PathPlanner.cpp  Point.cpp  Robot.cpp  RobotPath.cpp  RobotPosition.cpp  main.cpp
docs/: Doxyfile
docs/html/: Environment_8hpp.html  Environment_8hpp__dep__incl.map  Environment_8hpp__dep__incl.md5  Environment_8hpp__incl.map  Environment_8hpp__incl.md5  Environment_8hpp_source.html  Obstacle_8hpp.html  Obstacle_8hpp__dep__incl.map  Obstacle_8hpp__dep__incl.md5  Obstacle_8hpp__incl.map  Obstacle_8hpp__incl.md5  Obstacle_8hpp_source.html  PathPlanner_8hpp.html  PathPlanner_8hpp__dep__incl.map  PathPlanner_8hpp__dep__incl.md5  PathPlanner_8hpp__incl.map  PathPlanner_8hpp__incl.md5  PathPlanner_8hpp_source.html  Point_8hpp.html  Point_8hpp__dep__incl.map  Point_8hpp__dep__incl.md5  Point_8hpp_source.html  RobotPath_8hpp.html  RobotPath_8hpp__dep__incl.map  RobotPath_8hpp__dep__incl.md5  RobotPath_8hpp__incl.map  RobotPath_8hpp__incl.md5  RobotPath_8hpp_source.html  RobotPosition_8hpp.html  Robot_8hpp.html  (+61 more)
include/: Environment.hpp  Obstacle.hpp  PathPlanner.hpp  Point.hpp  Robot.hpp  RobotPath.hpp  RobotPosition.hpp
results/: cppcheck_results  cpplint_results
test/: CMakeLists.txt  EnvironmentTest.cpp  ObstacleTest.cpp  PathPlannerTest.cpp  PointTest.cpp  RobotPathTest.cpp  RobotPositionTest.cpp  RobotTest.cpp  main.cpp  test.cpp
(+81 files in other folders)
